# cardgame

./: CMakeLists.txt  card.cc  deck.cc  fragment_shader.frag  game.cc  game.hh  pile.cc  renderer.cc  renderer.hh  resource_manager.hh  run.cc  run.hh  shader.cc  shader.hh  texture.cc  texture.hh  vertex_shader.vert
cards/: example_rules.json
include/: card.hh  client.hh  deck.hh  font.hh  game.hh  game_object.hh  info.hh  multiplayer.hh  pile.hh  renderer.hh  resource_manager.hh  server.hh  shader.hh  text_box.hh  text_renderer.hh  texture.hh
src/: card.cc  client.cc  deck.cc  font.cc  fragment_shader.frag  game.cc  game_object.cc  multiplayer.cc  renderer.cc  resource_manager.cc  server.cc  shader.cc  sprite_fragment.frag  text_box.cc  text_fragment.frag  text_renderer.cc  texture.cc  vertex_shader.vert
textures/: join_game.jfif  new_game.jfif
